tests/ui/explain/error-with-no-explanation.rs
// It's a valid error with no added explanation
//@ compile-flags: --explain E9999
//~? ERROR: E9999 is not a valid error code
